# mandelbrot_cuda

./: CMakeLists.txt  Makefile  README.md  main.cpp  mandelbrot.cu
